[project]
name = "tbavli"
version = "0.0.1"
description = "Server Emulator for MapleStory v95.1"
authors = [
    {name = "Rashbi",email = "itsrashbi@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
